tests/should_fail/syntax_store_expr_no_block.nv
module main

// SHOULD FAIL: ~> (store expression) without a block
fn get() -> Int { return 1 }
let result = get() ~> x
println(result)
